# the_haritz-ml-tool

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml
Knight/WalletWatch_HAR_ITZ/: README.md  pyproject.toml  requirements.txt
Knight/WalletWatch_HAR_ITZ/data/: cleaned_wallet_transactions.csv  parsed_wallet_data.json  risk_score_distribution.csv  wallet_data.json  wallet_features.csv  wallet_features_with_risk_score.csv  wallet_transactions.csv  wallet_txn.db
Knight/WalletWatch_HAR_ITZ/src/: EDA.ipynb  __init__.py  clean.py  extract_wallet_data.py  models.ipynb  predictor.py  schemas.py
Knight/WalletWatch_HAR_ITZ/src/model/: xgb_model.pkl
data/: cleaned_wallet_transactions.csv  parsed_wallet_data.json  risk_score_distribution.csv  wallet_data.json  wallet_features.csv  wallet_features_with_risk_score.csv  wallet_transactions.csv
src/: EDA.ipynb  EDA.py  clean.py  extract_wallet_data.py  predictor.py  schemas.py
