[project]
name = "the-haritz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "joblib>=1.4.2",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.2",
    "xgboost>=3.0.0",
]
